# Starboard-3

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.json.example  mypy.ini  noxfile.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  pytest.yml
migrate/: __main__.py  create_indexes.sql  drop_indexes.sql  migrate.py  old_db.py  old_reaction_valid.py
starboard/: __main__.py  bot.py  cache.py  config.py  constants.py  cooldown.py  cooldowns.py  exceptions.py  stats.py  undefined.py  utils.py
starboard/commands/: _autocomplete.py  _checks.py  _converters.py  _sb_config.py  _utils.py  aschannel.py  base.py  errors.py  fun.py  override.py  owner.py  permrole.py  posrole.py  premium.py  sb_config.py  starboard.py  utility.py  xprole.py
starboard/core/: autostar.py  config.py  cooldown.py  embed_message.py  emojis.py  gifs.py  has_image.py  leaderboard.py  messages.py  notifications.py  permrole.py  posrole.py  premium.py  reactions.py  sb_messages.py  starboards.py  stars.py  votes.py  xprole.py
starboard/database/: __init__.py  database.py  get_or_create.py
starboard/database/migrations/0/: describe.json  migrations.sql
starboard/database/migrations/0000/: describe.json  migrations.sql
starboard/database/migrations/0001/: describe.json  migrations.sql
starboard/database/migrations/0002/: describe.json  migrations.sql
starboard/database/migrations/0003/: describe.json  migrations.sql
starboard/database/migrations/0004/: describe.json  migrations.sql
starboard/database/migrations/0005/: describe.json  migrations.sql
starboard/database/migrations/0006/: describe.json
starboard/database/migrations/0008/: describe.json  migrations.sql
starboard/database/migrations/0009/: describe.json  migrations.sql
starboard/database/migrations/0010/: describe.json  migrations.sql
starboard/database/migrations/1/: describe.json  migrations.sql
starboard/database/migrations/10/: migrations.sql
starboard/database/migrations/2/: describe.json  migrations.sql
starboard/database/migrations/3/: describe.json  migrations.sql
starboard/database/migrations/4/: describe.json  migrations.sql
starboard/database/migrations/5/: describe.json  migrations.sql
starboard/database/models/: _checks.py  _converters.py  _utils.py  _validators.py  aschannel.py  autoredeem.py  guild.py  member.py  message.py  override.py  permgroup.py  permrole.py  posrole.py  sb_message.py  star.py  starboard.py  user.py  vote.py  xprole.py
starboard/events/: autostar.py  base.py  dismiss.py  link_edit.py  patreon_join.py  reactions.py
starboard/tasks/: __init__.py  expired_premium.py  patreon.py  post_stats.py  sweep_cache.py
starboard/views/: __init__.py  confirm.py  infinite_scroll.py  paginate.py
tests/: test_tests.py
(+8 files in other folders)
