[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "starboard"
version = "0.0.0"
description = ""
authors = ["Circuit"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.8.1"
cachetools = "^5.1.0"
types-cachetools = "^5.0.1"
emoji = "^1.7.0"
types-emoji = "^1.2.8"
hikari = "^2.0.0.dev108"
hikari-miru = "^1.0.1"
hikari-clusters = "^0.2.5"
hikari-crescent = "^0.1.0-beta.3"
types-pytz = "^2021.3.8"
pytz = "^2022.1"
tqdm = "^4.64.0"
pycooldown = "^0.1.0b5"
apgorm = "^1.0.0-beta.9"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.9.3"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
