[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "starboard"
version = "0.0.0"
description = ""
authors = ["Circuit"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.8.1"
cachetools = "^5.1.0"
types-cachetools = "^5.0.1"
emoji = "^1.7.0"
types-emoji = "^1.7.1"
hikari-miru = "^1.0.1"
hikari-clusters = "^0.2.5"
hikari-crescent = "^0.2.2"
tqdm = "^4.64.0"
pycooldown = "^0.1.0b8"
apgorm = "^1.0.0-beta.11"
humanize = "^4.1.0"
uvloop = {version = "^0.16.0", markers = "sys_platform == 'darwin' or sys_platform == 'linux'"}
hikari = {extras = ["speedups"], version = "^2.0.0-alpha.109"}

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.9.3"
mypy = "^0.971"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
