[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.ruff]
extend-select = [
    # isort
    "I001"
]

[tool.poetry]
name = "starboard"
version = "0.0.0"
description = ""
authors = ["Circuit"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.8.1"
cachetools = "^5.1.0"
types-cachetools = "^5.0.1"
emoji = "^2.0.0"
types-emoji = "^2.0.1"
hikari-miru = "^2.0.1"
hikari-clusters = "^1.1.1"
hikari-crescent = "^0.4.0"
tqdm = "^4.64.0"
pycooldown = "^0.1.0b8"
apgorm = "^1.0.0-beta.11"
humanize = "^4.1.0"
uvloop = {version = "^0.17.0", markers = "sys_platform == 'darwin' or sys_platform == 'linux'"}
hikari = {extras = ["speedups"], version = "^2.0.0.dev112"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^22.3"
mypy = "^0.991"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
